--- a/data/cards/27868563.yaml
+++ b/data/cards/27868563.yaml
@@ -1,7 +1,7 @@
 konami_id: 19465
 password: 27868563
 name:
-  en: Goblin Rider Boon the Machspeed
+  en: Goblin Biker Boon the Machspeed
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, if this card is in your hand or GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card. Until the end of the next turn after this effect resolves, you cannot Special Summon "Goblin Rider Boon the Machspeed".
+    During the Main Phase, if this card is in your hand or GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card. Until the end of the next turn after this effect resolves, you cannot Special Summon "Goblin Biker Boon the Machspeed".
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ atk: 1300
 def: 0
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GoblinRiderBoontheMachspeed-PHNI-JP-C.png
+  image: GoblinBikerBoontheMachspeed-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP010
