--- a/data/cards/64327901.yaml
+++ b/data/cards/64327901.yaml
@@ -1,7 +1,7 @@
 konami_id: 19515
 password: 64327901
 name:
-  en: Grand Meeting of the Goblin Riders
+  en: Grand Meeting of the Goblin Bikers
   de:
   es:
   fr:
@@ -18,7 +18,7 @@ text:
     "Goblin" monsters you control gain 300 ATK for each "Goblin" monster you control. During your Main Phase, you can Normal Summon 1 "Goblin" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can target 2 "Goblin" monsters you control that have a Level, then activate 1 of these effects;
     ● The Level of 1 of them becomes the Level of the other.
     ● The Levels of both monsters become their combined original Levels.
-    You can only use this effect of "Grand Meeting of the Goblin Riders" once per turn.
+    You can only use this effect of "Grand Meeting of the Goblin Bikers" once per turn.
   de:
   es:
   fr:
@@ -35,10 +35,10 @@ card_type: Spell
 property: Continuous
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GrandMeetingoftheGoblinRiders-PHNI-JP-C.png
+  image: GrandMeetingoftheGoblinBikers-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP060
