--- a/data/cards/90711610.yaml
+++ b/data/cards/90711610.yaml
@@ -32,10 +32,10 @@ card_type: Spell
 property: Normal
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerGrandEntrance-PHNI-JP-R.png
+  image: GoblinBikerGrandEntrance-PHNI-EN-LE-OP.png
 sets:
   en:
   - set_number: PHNI-ENSP1
