--- a/data/cards/34001672.yaml
+++ b/data/cards/34001672.yaml
@@ -1,7 +1,7 @@
 konami_id: 19502
 password: 34001672
 name:
-  en: Goblin Rider Big-Head Gabonga
+  en: Goblin Biker Big-Head Gabonga
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If a material(s) is detached from a monster(s) on the field (except during the Damage Step): You can target 1 other face-up monster on the field; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Rider Big-Head Gabonga" once per turn.
+    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If a material(s) is detached from a monster(s) on the field (except during the Damage Step): You can target 1 other face-up monster on the field; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Biker Big-Head Gabonga" once per turn.
   de:
   es:
   fr:
@@ -37,10 +37,10 @@ def: 0
 materials: 2 Level 3 monsters
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GoblinRiderBigHeadGabonga-PHNI-JP-UR.png
+  image: GoblinBikerBigHeadGabonga-PHNI-JP-UR.png
 sets:
   ja:
   - set_number: PHNI-JP047
