--- a/data/cards/50311058.yaml
+++ b/data/cards/50311058.yaml
@@ -1,7 +1,7 @@
 konami_id: 19530
 password: 50311058
 name:
-  en: Goblin Rider Stampede
+  en: Goblin Biker Stampede
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, you can: Immediately after this effect resolves, Xyz Summon using only "Goblin" monsters you control as material. If you control a "Goblin" Xyz Monster: You can target 1 Effect Monster on the field; detach 1 material from a monster on the field, and if you do, negate the targeted monster's effects until the end of this turn. You can only use 1 "Goblin Rider Stampede" effect per turn, and only once that turn.
+    During the Main Phase, you can: Immediately after this effect resolves, Xyz Summon using only "Goblin" monsters you control as material. If you control a "Goblin" Xyz Monster: You can target 1 Effect Monster on the field; detach 1 material from a monster on the field, and if you do, negate the targeted monster's effects until the end of this turn. You can only use 1 "Goblin Biker Stampede" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -30,10 +30,10 @@ card_type: Trap
 property: Continuous
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GoblinRiderStampede-PHNI-JP-C.png
+  image: GoblinBikerStampede-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP075
