--- a/data/cards/51473858.yaml
+++ b/data/cards/51473858.yaml
@@ -1,7 +1,7 @@
 konami_id: 19464
 password: 51473858
 name:
-  en: Goblin Rider Clutter the Noisy
+  en: Goblin Biker Clutter the Noisy
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can target 1 "Goblin" monster in your GY, except "Goblin Rider Clutter the Noisy"; Special Summon it. During your opponent's Main Phase, if this card is in your GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Rider Clutter the Noisy" once per turn.
+    If this card is Normal or Special Summoned: You can target 1 "Goblin" monster in your GY, except "Goblin Biker Clutter the Noisy"; Special Summon it. During your opponent's Main Phase, if this card is in your GY (Quick Effect): You can detach 1 material from a monster on the field, and if you do, Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Goblin Biker Clutter the Noisy" once per turn.
   de:
   es:
   fr:
@@ -34,10 +34,10 @@ atk: 1500
 def: 0
 series:
 - Goblin
-- Goblin Rider
+- Goblin Biker
 images:
 - index: 1
-  image: GoblinRiderCluttertheNoisy-PHNI-JP-C.png
+  image: GoblinBikerCluttertheNoisy-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP009
