--- a/data/cards/32175429.yaml
+++ b/data/cards/32175429.yaml
@@ -8,7 +8,7 @@ name:
   it: Richiamo Eroico
   pt: Chamado Heroico
   ja: ヒロイック・コール
-  ja_romaji: Heroikku Kōru
+  ja_romaji: Hiroikku Kōru
   ko: 히로익 콜
   ko_rr: Hiroik Kol
   zh-TW:
