--- a/rush.yaml
+++ b/rush.yaml
@@ -124998,27 +124998,44 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-requirement:
+summoning_condition:
   en: |-
-    TBA
+    You can Special Summon this card from your hand face-up to your field by revealing 1 other Fiend Type monster in your hand to your opponent.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の手札のモンスター（悪魔族）１体を相手に見せ、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
-effect:
+requirement:
   en: |-
-    TBA
+    None
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Face-up Fiend Type monsters on your field gain 300 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター（悪魔族）の攻撃力は３００アップする。
   ko:
   zh-TW:
   zh-CN:
