--- a/data/cards/46130346.yaml
+++ b/data/cards/46130346.yaml
@@ -8,7 +8,7 @@ name:
   it: Hinotama
   pt: Hinotama
   ja: ファイヤー・ボール
-  ja_romaji: Faiā Bōru
+  ja_romaji: Faiyā Bōru
   ko: 파이어 볼
   ko_rr:
   zh-TW: 火球
