--- a/data/rush/19683.yaml
+++ b/data/rush/19683.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: メテオ・ブラック・マーズドラゴン
-  ja_romaji: Meteo Burakku Māzu Doragon
+  ja_romaji: Meteo Burakku Māzudoragon
   ko:
   ko_rr:
   zh-TW:
