--- a/data/cards/90711610.yaml
+++ b/data/cards/90711610.yaml
@@ -45,6 +45,7 @@ sets:
   - set_number: PHNI-EN061
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
   de:
   - set_number: PHNI-DESP1
     set_name: Phantom Nightmare Premiere! promotional card
@@ -53,6 +54,7 @@ sets:
   - set_number: PHNI-DE061
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
   fr:
   - set_number: PHNI-FRSP1
     set_name: Phantom Nightmare Premiere! promotional card
@@ -61,6 +63,7 @@ sets:
   - set_number: PHNI-FR061
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
   it:
   - set_number: PHNI-ITSP1
     set_name: Phantom Nightmare Premiere! promotional card
@@ -69,6 +72,7 @@ sets:
   - set_number: PHNI-IT061
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
   pt:
   - set_number: PHNI-PTSP1
     set_name: Phantom Nightmare Premiere! promotional card
@@ -77,6 +81,7 @@ sets:
   - set_number: PHNI-PT061
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
   ja:
   - set_number: PHNI-JP061
     set_name: Phantom Nightmare
