--- a/data/rush/19559.yaml
+++ b/data/rush/19559.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if it was "Twin Edge Dragon".
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if that was "Twin Edge Dragon".
   de:
   es:
   fr:
