--- a/rush.yaml
+++ b/rush.yaml
@@ -63265,7 +63265,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if that monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if that monster was a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -103041,7 +103041,7 @@ images:
 - index: 1
   image: CelebRoseMagician-RDKP13-JP-SR.png
 - index: 2
-  image: CelebRoseMagician-RDBDG5-JP-OP.png
+  image: CelebRoseMagician-RDBDG5-JP-UPR.png
 sets:
   ja:
   - set_number: RD/KP13-JP012
@@ -117564,7 +117564,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if it was "Twin Edge Dragon".
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if that was "Twin Edge Dragon".
   de:
   es:
   fr:
@@ -123433,7 +123433,7 @@ name:
   it:
   pt:
   ja: メテオ・ブラック・マーズドラゴン
-  ja_romaji: Meteo Burakku Māzu Doragon
+  ja_romaji: Meteo Burakku Māzudoragon
   ko:
   ko_rr:
   zh-TW:
@@ -124569,7 +124569,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up Fusion Monster on the field to the owner's Extra Deck. Then, if all of the materials' names are specifically mentioned on the returned monster, its owner can Special Summon all of them from their Graveyard face-up to their field.
+    Return 1 face-up Fusion Monster from the field to the owner's Extra Deck. Then, if all of the materials' names are specifically mentioned on the returned monster, its owner can Special Summon all of them from their Graveyard face-up to their field.
   de:
   es:
   fr:
@@ -125359,7 +125359,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if it was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
+    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if that was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
   de:
   es:
   fr:
