--- a/data/cards/22512406.yaml
+++ b/data/cards/22512406.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 覆面忍者 惠比寿
 text:
   en: |-
-    Once per turn, if you control a face-up "Ninja" monster other than "Masked Ninja Ebisu", you can activate this effect: Return a number of your opponent's Spell/Trap Cards to the hand, equal to the number of "Ninja" monsters you control, also every face-up "Goe Goe the Gallant Ninja" you control can attack your opponent directly this turn.
+    Once per turn, if you control a "Ninja" monster other than "Masked Ninja Ebisu": You can activate this effect; return Spells/Traps your opponent controls to the hand, equal to the number of "Ninja" monsters you control, also each of your "Goe Goe the Gallant Ninja" can attack your opponent directly this turn.
   de: |-
     Einmal pro Spielzug, falls du ein offenes „Ninja“-Monster kontrollierst, außer „Maskierter Ninja Ebisu“, kannst du diesen Effekt aktivieren: Gib so viele Zauber-/Fallenkarten deines Gegners auf die Hand zurück, wie du „Ninja“-Monster kontrollierst, zusätzlich kann jeder offene „Goe Goe, der galante Ninja“, den du kontrollierst, deinen Gegner in diesem Spielzug direkt angreifen.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Ninja
 images:
 - index: 1
-  image: MaskedNinjaEbisu-ORCS-JP-C.jpg
+  image: MaskedNinjaEbisu-LART-EN-UR-LE.png
   illustration: MaskedNinjaEbisu-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: MaskedNinjaEbisu-ORCS-EN-C-1E.jpg
@@ -55,21 +55,42 @@ sets:
     set_name: Order of Chaos
     rarities:
     - Common
+  - set_number: LART-EN064
+    set_name: The Lost Art Promotion 2023 K
+    rarities:
+    - Ultra Rare
   de:
   - set_number: ORCS-DE030
     set_name: Order of Chaos
     rarities:
     - Common
+  - set_number: LART-DE064
+    set_name: The Lost Art Promotion 2023 K
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: ORCS-FR030
     set_name: Order of Chaos
     rarities:
     - Common
+  - set_number: LART-FR064
+    set_name: The Lost Art Promotion 2023 K
+    rarities:
+    - Ultra Rare
   it:
   - set_number: ORCS-IT030
     set_name: Order of Chaos
     rarities:
     - Common
+  - set_number: LART-IT064
+    set_name: The Lost Art Promotion 2023 K
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LART-PT064
+    set_name: The Lost Art Promotion 2023 K
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ORCS-JP030
     set_name: Order of Chaos
