--- a/data/cards/12930501.yaml
+++ b/data/cards/12930501.yaml
@@ -39,9 +39,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DarkSpellRegeneration-CP20-JP-R.png;
+  image: DarkSpellRegeneration-CP20-JP-R.png
+  illustration: DarkSpellRegeneration-MADU-JP-VG-artwork.png
 - index: '1.1'
-  image: DarkSpellRegeneration-BLAR-EN-ScR-1E.png;
+  image: DarkSpellRegeneration-BLAR-EN-ScR-1E.png
+  illustration: DarkSpellRegeneration-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BLAR-EN001
