--- a/data/cards/46337945.yaml
+++ b/data/cards/46337945.yaml
@@ -89,7 +89,7 @@ sets:
   - set_number: CL02-SC096
     set_name: Classic Pack 02
     rarities:
-    - Rare
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
