--- a/data/cards/63261835.yaml
+++ b/data/cards/63261835.yaml
@@ -112,7 +112,7 @@ sets:
   - set_number: CL02-SC167
     set_name: Classic Pack 02
     rarities:
-    - Super Rare
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
