--- a/data/cards/09236985.yaml
+++ b/data/cards/09236985.yaml
@@ -89,7 +89,7 @@ sets:
   - set_number: CL02-SC095
     set_name: Classic Pack 02
     rarities:
-    - Common
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
