--- a/data/cards/59851535.yaml
+++ b/data/cards/59851535.yaml
@@ -105,7 +105,7 @@ sets:
   - set_number: CL02-SC056
     set_name: Classic Pack 02
     rarities:
-    - Common
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
