--- a/data/cards/64437633.yaml
+++ b/data/cards/64437633.yaml
@@ -84,7 +84,7 @@ sets:
   - set_number: CL02-SC097
     set_name: Classic Pack 02
     rarities:
-    - Common
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
