--- a/data/rush/yugipedia1028876.yaml
+++ b/data/rush/yugipedia1028876.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（ギャラクシー族）２体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時１４００アップする。この効果の条件で効果モンスター（レベル７）２体を戻した場合、さらにこのターン、このカードは戦闘と相手の罠カードの効果では破壊されず、２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「トランザム・ライナック」＋モンスター（レベル７／光属性／ギャラクシー族）
   ko:
   zh-TW:
   zh-CN:
