--- a/data/cards/04545683.yaml
+++ b/data/cards/04545683.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 机皇帝 神陆∞
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When a face-up monster you control is destroyed by a card effect and sent to the GY (except during the Damage Step): You can Special Summon this card from your hand. Once per turn: You can target 1 Synchro Monster your opponent controls; equip that target to this card. This card gains ATK/DEF equal to half your LP and ATK equal to the combined ATK of the monsters equipped to it by this effect. You can target 1 of these equipped monsters; Special Summon that target to your field in Defense Position.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When a face-up monster you control is destroyed by a card effect and sent to the GY (except during the Damage Step): You can Special Summon this card from your hand. Once per turn: You can target 1 Synchro Monster your opponent controls; equip that target to this card. Gains ATK/DEF equal to half your LP and ATK equal to the combined ATK of the monsters equipped to it by this effect. You can target 1 of these equipped monsters; Special Summon that target to your field in Defense Position.
   de: |-
     Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch seinen eigenen Effekt als Spezialbeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Wenn ein offenes Monster, das du kontrollierst, durch einen Karteneffekt zerstört und auf den Friedhof gelegt wird (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Diese Karte erhält ATK und DEF in Höhe der Hälfte deiner LP. Einmal pro Spielzug: Du kannst 1 Synchromonster wählen, das dein Gegner kontrolliert; rüste diese Karte mit dem gewählten Ziel aus. Diese Karte erhält ATK in Höhe der Summe der ATK der Monster, mit denen sie durch diesen Effekt ausgerüstet ist. Du kannst 1 dieser ausrüstenden Monster wählen; beschwöre das gewählte Ziel als Spezialbeschwörung auf deine Spielfeldseite in die Verteidigungsposition.
   es: |-
@@ -45,7 +45,7 @@ series:
 - Meklord Emperor
 images:
 - index: 1
-  image: MeklordEmperorGranel-LED7-EN-C-1E.png
+  image: MeklordEmperorGranel-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: WQ11-EN003
