--- a/data/cards/42216237.yaml
+++ b/data/cards/42216237.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 杰拉的天使
 text:
   en: |-
-    1 Tuner + 1 or more non-Tuner monsters
-    This card gains 100 ATK for each of your opponent's banished cards. During the Standby Phase of the next turn after this card was banished: Special Summon this banished card. You can only use the effect of "Angel of Zera" once per turn.
+    1 Tuner + 1+ non-Tuner monsters
+    Gains 100 ATK for each of your opponent's banished cards. During the Standby Phase of the next turn after this card was banished: Special Summon this banished card. You can only use this effect of "Angel of Zera" once per turn.
   de: |-
     1 Empfänger- + 1 oder mehr Nicht-Empfänger-Monster
     Diese Karte erhält 100 ATK für jede verbannte Karte deines Gegners. Während der Standby Phase des nächsten Spielzugs, nachdem diese Karte verbannt wurde: Beschwöre diese verbannte Karte als Spezialbeschwörung. Du kannst den Effekt von „Engel von Zera“ nur einmal pro Spielzug verwenden.
@@ -55,7 +55,7 @@ series:
 - Zera
 images:
 - index: 1
-  image: AngelofZera-MP14-EN-ScR-1E.png
+  image: AngelofZera-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: JOTL-EN087
