--- a/data/cards/68140974.yaml
+++ b/data/cards/68140974.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 机皇帝 神智∞
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When a face-up monster you control is destroyed by a card effect and sent to the GY (except during the Damage Step): You can Special Summon this card from your hand. Other monsters you control cannot declare an attack. Once per turn: You can target 1 Synchro Monster your opponent controls; equip that target to this card. This card gains ATK equal to the combined ATK of the monsters equipped to it by this effect. Once per turn, when your opponent activates a Spell Card (Quick Effect): You can negate the activation, and if you do, destroy it.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When a face-up monster you control is destroyed by a card effect and sent to the GY (except during the Damage Step): You can Special Summon this card from your hand. Other monsters you control cannot declare an attack. Once per turn: You can target 1 Synchro Monster your opponent controls; equip that target to this card. Gains ATK equal to the combined ATK of the monsters equipped to it by this effect. Once per turn, when your opponent activates a Spell Card (Quick Effect): You can negate the activation, and if you do, destroy it.
   de: |-
     Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch seinen eigenen Effekt als Spezialbeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Wenn ein offenes Monster, das du kontrollierst, durch einen Karteneffekt zerstört und auf den Friedhof gelegt wird (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Andere Monster, die du kontrollierst, können keinen Angriff deklarieren. Einmal pro Spielzug: Du kannst 1 Synchromonster wählen, das dein Gegner kontrolliert; rüste diese Karte mit dem gewählten Ziel aus. Diese Karte erhält ATK in Höhe der Summe der ATK der Monster, mit denen sie durch diesen Effekt ausgerüstet ist. Einmal pro Spielzug, während des Spielzugs eines beliebigen Spielers, wenn dein Gegner eine Zauberkarte aktiviert: Du kannst die Aktivierung annullieren und falls du dies tust, zerstöre sie.
   es: |-
@@ -45,7 +45,7 @@ series:
 - Meklord Emperor
 images:
 - index: 1
-  image: MeklordEmperorWisel-LED7-EN-C-1E.png
+  image: MeklordEmperorWisel-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: SP13-EN047
