--- a/data/cards/26914168.yaml
+++ b/data/cards/26914168.yaml
@@ -44,7 +44,7 @@ series:
 - Dark counterpart
 images:
 - index: 1
-  image: DarkHonest-MP22-EN-UR-1E.png
+  image: DarkHonest-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: LIOV-EN022
@@ -59,6 +59,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: LIOV-DE022
     set_name: Lightning Overdrive
@@ -72,6 +73,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: LIOV-FR022
     set_name: Lightning Overdrive
@@ -85,6 +87,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: LIOV-IT022
     set_name: Lightning Overdrive
@@ -98,6 +101,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: LIOV-PT022
     set_name: Lightning Overdrive
@@ -111,6 +115,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: LIOV-JP022
     set_name: Lightning Overdrive
