--- a/data/cards/37742478.yaml
+++ b/data/cards/37742478.yaml
@@ -42,7 +42,7 @@ atk: 1100
 def: 1900
 images:
 - index: 1
-  image: Honest-SR05-EN-C-1E.png
+  image: Honest-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: LODT-EN001
@@ -94,6 +94,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   - set_number: DT07-EN005
     set_name: Duel Terminal 7a
     rarities:
@@ -148,6 +149,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: LODT-FR001
     set_name: Light of Destruction
@@ -198,6 +200,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: LODT-IT001
     set_name: Light of Destruction
@@ -248,6 +251,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: SDBE-PT017
     set_name: Saga of Blue-Eyes White Dragon Structure Deck
@@ -285,6 +289,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: LODT-JP001
     set_name: Light of Destruction
