--- a/data/cards/93662626.yaml
+++ b/data/cards/93662626.yaml
@@ -8,7 +8,7 @@ name:
   it: Fuocavaliere Veterano
   pt: Cavaleirardor Veterano
   ja: イグナイト・ウージー
-  ja_romaji: Igknight Ūjī
+  ja_romaji: Igunaito Ūjī
   ko: 이그나이트 우지
   ko_rr:
   zh-TW:
