--- a/data/cards/03048768.yaml
+++ b/data/cards/03048768.yaml
@@ -52,7 +52,7 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: AngelloVaalmonica-DBVS-JP-C.png
+  image: AngelloVaalmonica-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN031
@@ -99,6 +99,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001770
