--- a/data/cards/16227633.yaml
+++ b/data/cards/16227633.yaml
@@ -33,7 +33,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanBoneBack-DBVS-JP-C.png
+  image: MementotlanBoneBack-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: VASM-EN010
@@ -73,6 +73,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992711
