--- a/data/cards/41371602.yaml
+++ b/data/cards/41371602.yaml
@@ -33,7 +33,7 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: StandUpCenturIon-DBVS-JP-SR.png
+  image: StandUpCenturIon-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN020
@@ -76,6 +76,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003208
