--- a/data/cards/76821171.yaml
+++ b/data/cards/76821171.yaml
@@ -41,7 +41,7 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: DuralumeVaalmonicanHeathenHallow-DBVS-JP-SR.png
+  image: DuralumeVaalmonicanHeathenHallow-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN033
@@ -79,6 +79,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001772
