--- a/data/cards/77765207.yaml
+++ b/data/cards/77765207.yaml
@@ -34,7 +34,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: EmblemaOath-DBVS-JP-UR.png
+  image: EmblemaOath-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN021
@@ -74,6 +74,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1005864
