--- a/data/cards/81945676.yaml
+++ b/data/cards/81945676.yaml
@@ -37,7 +37,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanMace-DBVS-JP-C.png
+  image: MementotlanMace-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN006
@@ -79,6 +79,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992706
