--- a/data/cards/04582942.yaml
+++ b/data/cards/04582942.yaml
@@ -40,7 +40,7 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: VaalmonicaFollowedRhythm-DBVS-JP-C.png
+  image: VaalmonicaFollowedRhythm-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN039
@@ -80,6 +80,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001785
