--- a/data/cards/05605529.yaml
+++ b/data/cards/05605529.yaml
@@ -40,33 +40,38 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: VaalmonicaScelta-DBVS-JP-UR.png
+  image: VaalmonicaScelta-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN036
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE036
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR036
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT036
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT036
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP036
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -80,6 +85,6 @@ sets:
     - Ultra Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1004546
