--- a/data/cards/15005145.yaml
+++ b/data/cards/15005145.yaml
@@ -37,33 +37,38 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonPrimera-DBVS-JP-SR.png
+  image: CenturIonPrimera-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN016
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE016
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR016
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT016
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT016
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP016
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -77,6 +82,6 @@ sets:
     - Super Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003203
