--- a/data/cards/15982593.yaml
+++ b/data/cards/15982593.yaml
@@ -41,7 +41,7 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonLegatia-DBVS-JP-SR.png
+  image: CenturIonLegatia-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN019
@@ -89,6 +89,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003206
