--- a/data/cards/18165869.yaml
+++ b/data/cards/18165869.yaml
@@ -39,7 +39,7 @@ series:
 - Dark Blade
 images:
 - index: 1
-  image: MementotlanDarkBlade-DBVS-JP-SR.png
+  image: MementotlanDarkBlade-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN004
@@ -82,6 +82,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1002411
