--- a/data/cards/30432463.yaml
+++ b/data/cards/30432463.yaml
@@ -52,33 +52,38 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: DimonnoVaalmonica-DBVS-JP-C.png
+  image: DimonnoVaalmonica-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN032
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE032
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR032
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT032
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT032
     set_name: Valiant Smashers
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP032
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -94,6 +99,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001771
