--- a/data/cards/31971040.yaml
+++ b/data/cards/31971040.yaml
@@ -40,7 +40,7 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: VaalmonicaChosenMelody-DBVS-JP-C.png
+  image: VaalmonicaChosenMelody-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN040
@@ -80,6 +80,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001786
