--- a/data/cards/39210885.yaml
+++ b/data/cards/39210885.yaml
@@ -33,33 +33,38 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: VaalmonicatheAgathokakologicalVoice-DBVS-JP-C.png
+  image: VaalmonicatheAgathokakologicalVoice-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN035
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE035
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR035
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT035
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT035
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP035
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -73,6 +78,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001779
