--- a/data/cards/42493140.yaml
+++ b/data/cards/42493140.yaml
@@ -37,33 +37,38 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonTrudea-DBVS-JP-SR.png
+  image: CenturIonTrudea-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN017
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE017
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR017
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT017
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT017
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP017
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -75,6 +80,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003204
