--- a/data/cards/43338320.yaml
+++ b/data/cards/43338320.yaml
@@ -33,33 +33,38 @@ series:
 - Memento
 images:
 - index: 1
-  image: Mementomictlan-DBVS-JP-C.png
+  image: Mementomictlan-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: VASM-EN008
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE008
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR008
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT008
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT008
     set_name: Valiant Smashers
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP008
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -73,6 +78,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992709
