--- a/data/cards/54550967.yaml
+++ b/data/cards/54550967.yaml
@@ -37,33 +37,38 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanAngwitch-DBVS-JP-SR.png
+  image: MementotlanAngwitch-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN005
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE005
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR005
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT005
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT005
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP005
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -77,6 +82,6 @@ sets:
     - Super Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992704
