--- a/data/cards/55272555.yaml
+++ b/data/cards/55272555.yaml
@@ -38,7 +38,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanHornedDragon-DBVS-JP-C.png
+  image: MementotlanHornedDragon-VASM-EN-R-1E.png
 sets:
   en:
   - set_number: VASM-EN002
@@ -78,6 +78,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992699
