--- a/data/cards/77543769.yaml
+++ b/data/cards/77543769.yaml
@@ -33,7 +33,7 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonTrueAwakening-DBVS-JP-C.png
+  image: CenturIonTrueAwakening-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN024
@@ -73,6 +73,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003211
