--- a/data/cards/78598237.yaml
+++ b/data/cards/78598237.yaml
@@ -40,7 +40,7 @@ series:
 - Vaalmonica
 images:
 - index: 1
-  image: VaalmonicaIntonare-DBVS-JP-SR.png
+  image: VaalmonicaIntonare-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN038
@@ -78,6 +78,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1001783
