--- a/data/cards/78888899.yaml
+++ b/data/cards/78888899.yaml
@@ -37,33 +37,38 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonEmethVI-DBVS-JP-C.png
+  image: CenturIonEmethVI-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN018
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: VASM-DE018
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: VASM-FR018
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: VASM-IT018
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: VASM-PT018
     set_name: Valiant Smashers
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBVS-JP018
     set_name: 'Deck Build Pack: Valiant Smashers'
@@ -79,6 +84,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1003205
