--- a/data/cards/80722024.yaml
+++ b/data/cards/80722024.yaml
@@ -33,7 +33,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanBoneParty-DBVS-JP-SR.png
+  image: MementotlanBoneParty-VASM-EN-UR-1E.png
 sets:
   en:
   - set_number: VASM-EN009
@@ -71,6 +71,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992710
