--- a/data/cards/81677154.yaml
+++ b/data/cards/81677154.yaml
@@ -38,7 +38,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementotlanTatsunootoshigo-DBVS-JP-SR.png
+  image: MementotlanTatsunootoshigo-VASM-EN-SR-1E.png
 sets:
   en:
   - set_number: VASM-EN003
@@ -76,6 +76,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992702
