--- a/data/cards/21044178.yaml
+++ b/data/cards/21044178.yaml
@@ -8,7 +8,7 @@ name:
   it: Abitante dell'Abisso
   pt: Habitante do Abismo
   ja: <ruby>深<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>に<ruby>潜<rt>ひそ</rt></ruby>む<ruby>者<rt>もの</rt></ruby>
-  ja_romaji: Shin'en ni Hisomumono
+  ja_romaji: Shin'en ni Hisomu Mono
   ko: 심연에 숨은 자
   ko_rr: Sim-yeon-e Sum-eun Ja
   zh-TW: 深淵潛伏者
@@ -53,7 +53,7 @@ def: 1400
 materials: 2 Level 4 monsters
 images:
 - index: 1
-  image: AbyssDweller-OP13-EN-UtR-UE.png
+  image: AbyssDweller-OP20-EN-C-UE.png
 sets:
   en:
   - set_number: ABYR-EN084
