--- a/data/cards/91985515.yaml
+++ b/data/cards/91985515.yaml
@@ -8,7 +8,7 @@ name:
   it: Inizializzazione Koa'ki Meiru!
   pt:
   ja: <ruby>鋼核初期化<rt>コアキメイル・イニシャライズ</rt></ruby>
-  ja_romaji: Koakimeriu Inisharaizu
+  ja_romaji: Koakimeiru Inisharaizu
   ko: 코아키메일 초기화
   ko_rr: Koakimeil Chogihwa
   zh-TW:
