--- a/data/cards/13803864.yaml
+++ b/data/cards/13803864.yaml
@@ -119,5 +119,6 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 17371
 master_duel_rarity: N
