--- a/data/cards/15341821.yaml
+++ b/data/cards/15341821.yaml
@@ -264,5 +264,6 @@ sets:
 limit_regulation:
   tcg: Forbidden
   ocg: Forbidden
+  speed: Not yet released
 yugipedia_page_id: 22336
 master_duel_rarity: UR
