--- a/data/cards/15894048.yaml
+++ b/data/cards/15894048.yaml
@@ -203,5 +203,6 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 6611
 master_duel_rarity: R
