--- a/data/cards/21225115.yaml
+++ b/data/cards/21225115.yaml
@@ -100,5 +100,6 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 707915
 master_duel_rarity: SR
