--- a/rush.yaml
+++ b/rush.yaml
@@ -78263,6 +78263,10 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/HC01-JP024
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SD03-KR001
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
