--- a/data/cards/yugipedia1029156.yaml
+++ b/data/cards/yugipedia1029156.yaml
@@ -38,6 +38,7 @@ materials: 2 LIGHT and/or DARK monsters
 series:
 - Sky Striker
 - Sky Striker Ace
+- Signature move
 images:
 - index: 1
   image: CombinationManeuverEngageZero-YOS1-JP-OP.png
