--- a/data/cards/37351133.yaml
+++ b/data/cards/37351133.yaml
@@ -46,6 +46,9 @@ series:
 images:
 - index: 1
   image: SkyStrikerAceRoze-MGED-EN-PGR-1E.png
+  illustration: SkyStrikerAceRoze-MADU-EN-VG-artwork.png
+- index: 2
+  image: SkyStrikerAceRoze-24PP-JP-OP.png
 sets:
   en:
   - set_number: IGAS-EN020
@@ -128,6 +131,13 @@ sets:
     set_name: Selection 5
     rarities:
     - Common
+    - Super Rare
+    - Secret Rare
+  - set_number: 24PP-JP020
+    set_name: Premium Pack 2024
+    rarities:
+    - Common
+    - Normal Parallel Rare
     - Super Rare
     - Secret Rare
   ko:
