--- a/data/cards/64034255.yaml
+++ b/data/cards/64034255.yaml
@@ -48,6 +48,7 @@ images:
   illustration: GenexAllyBirdman-MADU-EN-VG-artwork.png
 - index: 2
   image: GenexAllyBirdman-TW01-JP-OP.png
+  illustration: GenexAllyBirdman-OW.png
 sets:
   en:
   - set_number: HA04-EN037
