--- a/data/rush/15602.yaml
+++ b/data/rush/15602.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent adds a card(s) from the Graveyard to the hand.
+    When your opponent adds a card(s) from the Graveyard to their hand.
   de:
   es:
   fr:
