--- a/rush.yaml
+++ b/rush.yaml
@@ -11169,7 +11169,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent adds a card(s) from the Graveyard to the hand.
+    When your opponent adds a card(s) from the Graveyard to their hand.
   de:
   es:
   fr:
@@ -31791,7 +31791,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 monster from either Graveyard into the Deck. Then, if your opponent has no cards in their hand, you can return 1 face-up monster from your opponent's field to the owner's hand.
+    Shuffle 1 monster from either Graveyard into the owner's Deck. Then, if your opponent has no cards in their hand, you can return 1 face-up monster from your opponent's field to the owner's hand.
   de:
   es:
   fr:
@@ -104985,7 +104985,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose up to 9 monsters in any Graveyard(s). Inflict damage to your opponent equal to [the number of those monsters] x 200, and this card gains ATK equal to [the number of those monsters] x 200 until the end of this turn. Then, shuffle those monsters into the owner's Deck.
+    Choose up to 9 monsters in the Graveyards. Inflict damage to your opponent equal to [the number of those monsters] x 200, and this card gains ATK equal to [the number of those monsters] x 200 until the end of this turn. Then, shuffle those monsters into the owner's Deck.
   de:
   es:
   fr:
