--- a/data/rush/15598.yaml
+++ b/data/rush/15598.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in both players' Graveyards] x 100 until the end of this turn.
+    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in both players' Graveyard] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -58,7 +58,4 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717080
