--- a/data/rush/16365.yaml
+++ b/data/rush/16365.yaml
@@ -1,6 +1,6 @@
 konami_id: 16365
 name:
-  en: Music Princess's Solo Performance
+  en: Music Princess's Recital
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's Level 8 or lower monster declares an attack while you have exactly 1 monster on your field.
+    When an opponent's Level 8 or lower monster declares an attack while you have 1 face-up monster on your field.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssSoloPerformance-RDGRD0-JP-C.png
+  image: MusicPrincesssRecital-RDGRD0-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP061
@@ -66,9 +66,4 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715966
