--- a/data/rush/17322.yaml
+++ b/data/rush/17322.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or lower Fiend Type monster with 0 DEF from your hand or your Graveyard face-up to your field. If you Special Summoned a Level 7 monster by this effect, you can add 1 Fiend Type monster from your Graveyard to your hand.
+    Special Summon 1 Level 7 or lower Fiend Type monster with 0 DEF from your hand or Graveyard face-up to your field. If you Special Summoned a Level 7 monster by this effect, you can also add 1 Fiend Type monster in your Graveyard to your hand.
   de:
   es:
   fr:
@@ -58,9 +58,4 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716518
