--- a/data/rush/17713.yaml
+++ b/data/rush/17713.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase while you have a Zombie Type monster in your Graveyard.
+    When your opponent conducts a normal draw during the Draw Phase while you have a Zombie Type monster in your Graveyard.
   de:
   es:
   fr:
