--- a/data/rush/18389.yaml
+++ b/data/rush/18389.yaml
@@ -1,6 +1,6 @@
 konami_id: 18389
 name:
-  en: Cobalt Kobold
+  en: Cobalt Cobolt
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1000
 def: 0
 images:
 - index: 1
-  image: CobaltKobold-RDORP1-JP-C.png
+  image: CobaltCobolt-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP060
@@ -60,9 +60,4 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714303
