--- a/data/rush/18393.yaml
+++ b/data/rush/18393.yaml
@@ -1,6 +1,6 @@
 konami_id: 18393
 name:
-  en: Cintamani of Saturnius
+  en: Saturnius' Orb
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: CintamaniofSaturnius-RDORP1-JP-UR.png
+  image: SaturniusOrb-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP064
@@ -58,9 +58,4 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714285
