--- a/data/rush/19343.yaml
+++ b/data/rush/19343.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase while you have 2 or more cards in your hand.
+    When your opponent conducts a normal draw during the Draw Phase while you have 2 or more cards in your hand.
   de:
   es:
   fr:
