--- a/data/rush/16366.yaml
+++ b/data/rush/16366.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your "Summoned Skull" or Level 7 or higher Fiend Type Normal Monster is destroyed by an opponent's attack.
+    When "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713067
