--- a/data/rush/16617.yaml
+++ b/data/rush/16617.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase.
+    When your opponent conducts a normal draw during the Draw Phase.
   de:
   es:
   fr:
