--- a/data/rush/16691.yaml
+++ b/data/rush/16691.yaml
@@ -1,6 +1,6 @@
 konami_id: 16691
 name:
-  en: Gatekeeping Gargoyle
+  en: Gate Gargoyle
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1600
 def: 1200
 images:
 - index: 1
-  image: GatekeepingGargoyle-RDKP06-JP-R.png
+  image: GateGargoyle-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP035
@@ -60,9 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715082
