--- a/data/rush/16716.yaml
+++ b/data/rush/16716.yaml
@@ -1,6 +1,6 @@
 konami_id: 16716
 name:
-  en: Ruler's Deadly Duel
+  en: Dark Ruler Battle Slash
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attacking monster loses 400 ATK until the end of this turn. Then, if you have a face-up Level 8 or higher Warrior Type monster on your field, you can destroy 1 Spell/Trap Card on your opponent's field.
+    The attacking monster loses 400 ATK until the end of this turn. If you have a face-up Level 8 or higher Warrior Type monster on your field, you can also destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: RulersDeadlyDuel-RDKP06-JP-SR.png
+  image: DarkRulerBattleSlash-RDKP06-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP06-JP060
@@ -58,9 +58,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716532
