--- a/data/rush/16781.yaml
+++ b/data/rush/16781.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase, pay 1000 LP.
+    When your opponent conducts a normal draw during the Draw Phase, pay 1000 LP.
   de:
   es:
   fr:
