--- a/data/rush/16790.yaml
+++ b/data/rush/16790.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase.
+    When your opponent conducts a normal draw during the Draw Phase.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 2 or 3 Fiend Type Normal Monsters with different Levels from your Graveyard to your hand.
+    Add 2 to 3 Fiend Type Normal Monsters with different Levels from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -58,9 +58,4 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715533
