--- a/data/rush/16984.yaml
+++ b/data/rush/16984.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or higher Fiend Type Normal Monster from your hand to your field in face-up Defense Position. Increase this card's Level by 5 until the end of this turn.
+    Special Summon 1 Level 5 or higher Fiend Type Normal Monster from your hand on your field in face-up Defense Position. Increase this card's Level by 5 until the end of this turn.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716515
