--- a/rush.yaml
+++ b/rush.yaml
@@ -10911,7 +10911,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in both players' Graveyards] x 100 until the end of this turn.
+    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in both players' Graveyard] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -10941,9 +10941,6 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717080
 ---
 konami_id: 15599
@@ -11211,9 +11208,6 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716444
 ---
 konami_id: 15603
@@ -28392,9 +28386,6 @@ sets:
     rarities:
     - Common
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715943
 ---
 konami_id: 16307
@@ -32300,7 +32291,7 @@ yugipedia_page_id: 714301
 ---
 konami_id: 16365
 name:
-  en: Music Princess's Solo Performance
+  en: Music Princess's Recital
   de:
   es:
   fr:
@@ -32314,7 +32305,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's Level 8 or lower monster declares an attack while you have exactly 1 monster on your field.
+    When an opponent's Level 8 or lower monster declares an attack while you have 1 face-up monster on your field.
   de:
   es:
   fr:
@@ -32346,7 +32337,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssSoloPerformance-RDGRD0-JP-C.png
+  image: MusicPrincesssRecital-RDGRD0-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP061
@@ -32366,11 +32357,6 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715966
 ---
 konami_id: 16366
@@ -32389,7 +32375,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your "Summoned Skull" or Level 7 or higher Fiend Type Normal Monster is destroyed by an opponent's attack.
+    When "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -32431,9 +32417,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713067
 ---
 konami_id: 16367
@@ -36315,7 +36298,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase.
+    When your opponent conducts a normal draw during the Draw Phase.
   de:
   es:
   fr:
@@ -38558,7 +38541,7 @@ yugipedia_page_id: 715628
 ---
 konami_id: 16691
 name:
-  en: Gatekeeping Gargoyle
+  en: Gate Gargoyle
   de:
   es:
   fr:
@@ -38606,7 +38589,7 @@ atk: 1600
 def: 1200
 images:
 - index: 1
-  image: GatekeepingGargoyle-RDKP06-JP-R.png
+  image: GateGargoyle-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP035
@@ -38618,11 +38601,6 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715082
 ---
 konami_id: 16692
@@ -40241,7 +40219,7 @@ yugipedia_page_id: 716326
 ---
 konami_id: 16716
 name:
-  en: Ruler's Deadly Duel
+  en: Dark Ruler Battle Slash
   de:
   es:
   fr:
@@ -40269,7 +40247,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attacking monster loses 400 ATK until the end of this turn. Then, if you have a face-up Level 8 or higher Warrior Type monster on your field, you can destroy 1 Spell/Trap Card on your opponent's field.
+    The attacking monster loses 400 ATK until the end of this turn. If you have a face-up Level 8 or higher Warrior Type monster on your field, you can also destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
@@ -40287,7 +40265,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: RulersDeadlyDuel-RDKP06-JP-SR.png
+  image: DarkRulerBattleSlash-RDKP06-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP06-JP060
@@ -40299,11 +40277,6 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716532
 ---
 konami_id: 16717
@@ -42099,7 +42072,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase, pay 1000 LP.
+    When your opponent conducts a normal draw during the Draw Phase, pay 1000 LP.
   de:
   es:
   fr:
@@ -42658,7 +42631,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A man who carries the power of an evil star. He respects Echeclus the Star Knight as his teacher and mentor.
+    An individual imbued with the power of a wicked celestial being. Looks up to Echeclus the Star Knight as one would a mentor.
   de:
   es:
   fr:
@@ -42692,11 +42665,6 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716026
 ---
 konami_id: 16790
@@ -42715,7 +42683,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase.
+    When your opponent conducts a normal draw during the Draw Phase.
   de:
   es:
   fr:
@@ -42729,7 +42697,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 2 or 3 Fiend Type Normal Monsters with different Levels from your Graveyard to your hand.
+    Add 2 to 3 Fiend Type Normal Monsters with different Levels from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -42759,11 +42727,6 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715533
 ---
 konami_id: 16791
@@ -45433,9 +45396,6 @@ sets:
     set_name: Extra Transcend Enhancement Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717045
 ---
 konami_id: 16913
@@ -49017,7 +48977,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or higher Fiend Type Normal Monster from your hand to your field in face-up Defense Position. Increase this card's Level by 5 until the end of this turn.
+    Special Summon 1 Level 5 or higher Fiend Type Normal Monster from your hand on your field in face-up Defense Position. Increase this card's Level by 5 until the end of this turn.
   de:
   es:
   fr:
@@ -49051,9 +49011,6 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716515
 ---
 konami_id: 16985
@@ -58507,7 +58464,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or lower Fiend Type monster with 0 DEF from your hand or your Graveyard face-up to your field. If you Special Summoned a Level 7 monster by this effect, you can add 1 Fiend Type monster from your Graveyard to your hand.
+    Special Summon 1 Level 7 or lower Fiend Type monster with 0 DEF from your hand or Graveyard face-up to your field. If you Special Summoned a Level 7 monster by this effect, you can also add 1 Fiend Type monster in your Graveyard to your hand.
   de:
   es:
   fr:
@@ -58537,11 +58494,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716518
 ---
 konami_id: 17323
@@ -63946,11 +63898,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715100
 ---
 konami_id: 17540
@@ -70742,7 +70689,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase while you have a face-up Zombie Type monster on your field.
+    When your opponent conducts a normal draw during the Draw Phase while you have a face-up Zombie Type monster on your field.
   de:
   es:
   fr:
@@ -70874,7 +70821,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase while you have a Zombie Type monster in your Graveyard.
+    When your opponent conducts a normal draw during the Draw Phase while you have a Zombie Type monster in your Graveyard.
   de:
   es:
   fr:
@@ -82886,11 +82833,6 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716655
 ---
 konami_id: 18265
@@ -89787,7 +89729,7 @@ yugipedia_page_id: 716481
 ---
 konami_id: 18389
 name:
-  en: Cobalt Kobold
+  en: Cobalt Cobolt
   de:
   es:
   fr:
@@ -89835,7 +89777,7 @@ atk: 1000
 def: 0
 images:
 - index: 1
-  image: CobaltKobold-RDORP1-JP-C.png
+  image: CobaltCobolt-RDORP1-JP-C.png
 sets:
   ja:
   - set_number: RD/ORP1-JP060
@@ -89847,11 +89789,6 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714303
 ---
 konami_id: 18390
@@ -90067,7 +90004,7 @@ yugipedia_page_id: 717351
 ---
 konami_id: 18393
 name:
-  en: Cintamani of Saturnius
+  en: Saturnius' Orb
   de:
   es:
   fr:
@@ -90111,7 +90048,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: CintamaniofSaturnius-RDORP1-JP-UR.png
+  image: SaturniusOrb-RDORP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/ORP1-JP064
@@ -90125,11 +90062,6 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714285
 ---
 konami_id: 18394
@@ -91346,9 +91278,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717490
 ---
 konami_id: 18582
@@ -114850,7 +114779,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws for their normal draw in their Draw Phase while you have 2 or more cards in your hand.
+    When your opponent conducts a normal draw during the Draw Phase while you have 2 or more cards in your hand.
   de:
   es:
   fr:
