--- a/data/rush/18637.yaml
+++ b/data/rush/18637.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 2-7 monsters with different names from your opponent's Graveyard into their Deck. Then, if you shuffled 6 or more monsters by this effect, you can shuffle 1 face-up Level 8 or lower monster from your opponent's field into the owner's Deck.
+    Shuffle 2 to 7 monsters with different names from your opponent's Graveyard into the Deck. Then, if you shuffled 6 or more monsters by this effect, you can shuffle 1 face-up Level 8 or lower monster from your opponent's field into the owner's Deck.
   de:
   es:
   fr:
