--- a/data/rush/19424.yaml
+++ b/data/rush/19424.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
+  - set_number: RD/JF24-JPD01
+    set_name: Blue-Eyes Duel Set
+    rarities:
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
