--- a/data/rush/16600.yaml
+++ b/data/rush/16600.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Level 7 or higher Wyrm Type monster is destroyed by an opponent's attack.
+    When a Level 7 or higher Wyrm Type monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
