--- a/data/rush/16899.yaml
+++ b/data/rush/16899.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Attack Position LIGHT Attribute monster is destroyed by an opponent's attack.
+    When an Attack Position LIGHT Attribute monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
