--- a/data/rush/17026.yaml
+++ b/data/rush/17026.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your monster is destroyed by an opponent's attack.
+    When a monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
