--- a/data/rush/17212.yaml
+++ b/data/rush/17212.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Normal Monster from your hand or your Graveyard face-up to your field. This turn, it gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
+    Special Summon 1 Level 7 Normal Monster from your hand or Graveyard face-up to your field. This turn, it gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
