--- a/data/rush/17586.yaml
+++ b/data/rush/17586.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Galaxy Type Normal Monster with 1600 or more ATK from your hand or your Graveyard to your field in face-up Attack Position.
+    Special Summon 1 Galaxy Type Normal Monster with 1600 or more ATK from your hand or Graveyard to your field in face-up Attack Position.
   de:
   es:
   fr:
