--- a/data/rush/18368.yaml
+++ b/data/rush/18368.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 6 monster with 500 DEF from your hand or your Graveyard face-up to your field. Your Level 7 or higher monsters cannot attack this turn.
+    Special Summon 1 Level 6 monster with 500 DEF from your hand or Graveyard face-up to your field. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
