--- a/data/rush/18374.yaml
+++ b/data/rush/18374.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you would normal draw until you have 5 cards in your hand during your Draw Phase, normal draw until you have 6 cards in your hand instead.
+    If you would conduct a normal draw until you have 5 cards in your hand during the Draw Phase, normal draw until you have 6 cards in your hand instead.
   de:
   es:
   fr:
