--- a/data/rush/18641.yaml
+++ b/data/rush/18641.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your DARK Attribute Galaxy Type monster with 1500 or more ATK is destroyed by an opponent's attack.
+    When a DARK Attribute Galaxy Type monster with 1500 or more ATK on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
