--- a/data/rush/18647.yaml
+++ b/data/rush/18647.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your monster is destroyed by an opponent's attack, shuffle 2 Level 5 or higher monsters from your Graveyard into the Deck.
+    When a monster on your field is destroyed by an opponent's attack, shuffle 2 Level 5 or higher monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
