--- a/data/rush/19306.yaml
+++ b/data/rush/19306.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Gaia The Fierce Knight" or 1 Level 5 Dragon Type Normal Monster from your hand or your Graveyard face-up to your field.
+    Special Summon 1 "Gaia The Fierce Knight" or 1 Level 5 Dragon Type Normal Monster from your hand or Graveyard face-up to your field.
   de:
   es:
   fr:
