--- a/data/rush/19701.yaml
+++ b/data/rush/19701.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a monster(s) is destroyed by battle.
+    When a monster(s) on the field is destroyed by battle.
   de:
   es:
   fr:
